layout issues fix

--- a/src/Home.css
+++ b/src/Home.css
@@ -4,17 +4,27 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
-    background-color: rgb(29, 72, 102);
+    position: relative;
 }
 
 .home__image {
     width: 100vw;
     z-index: -1;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+    margin-bottom: -50px;
+}
+
+.home__h1 {
+    color: #fff;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+
 }
 
 .home__row {
     display: flex;
+    justify-content: center;
     z-index: 1;
     margin-left: 5px;
     margin-right: 5px;
