--- a/src/Product.css
+++ b/src/Product.css
@@ -2,22 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-evenly;
     margin: 10px;
     padding: 20px;
-    width: 100%;
-    max-width: 100px;
-    max-height: 400px;
     background-color: #fff;
     z-index: 1;
+    height: 500px;
 }
 
 .product__rating {
     display: flex;
+    justify-content: center;
 }
 
 .product > img {
-    max-height: 200px;
+    max-height: 250px;
     width: 100%;
     object-fit: contain;
     margin: 20px 0 0 15px;
@@ -27,6 +26,7 @@
     background: #ff9f00;
     border: 1px solid;
     margin-top: 10px;
+    padding: 5px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
 }
